<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34495E"
    tools:context="com.naveen.teamcity.FavoritesActivity" >

    <LinearLayout
        android:id="@+id/favView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/fav_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/percentageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="fill_vertical|center_vertical|right"
                    android:text="@string/last_updated"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/refreshDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_vertical|center_vertical|right"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <Switch
                android:id="@+id/autoRefreshBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="fill_vertical|center_vertical|right"
                android:text="@string/autorefresh"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <com.twotoasters.jazzylistview.JazzyListView
            android:id="@+id/favList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:descendantFocusability="blocksDescendants"
            android:divider="#34495E"
            android:dividerHeight="1dp"
            app:effect="cards"
            app:max_velocity="0"
            app:only_animate_fling="false"
            app:only_animate_new_items="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nodata_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/infoicon" />

            <TextView
                android:id="@+id/no_data_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/no_builds_found_please_add_builds_or_configure_teamcity_server"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/configureBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/custom_button"
            android:onClick="startServerConfigActivity"
            android:padding="15dp"
            android:text="@string/addBuild"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>